Menu z-index fix

--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -58,7 +58,7 @@
     height: 100vh;
     width: 100vw;
     background-color: $accent-color;
-    z-index: 100;
+    z-index: 200;
 
     // transform: translateY(-100%);
     transform: translateX(100%);
